<resources>
    <string name="app_name">PassManagerKotlin</string>
    <string name="pref_name">PassManagerPreference</string>
    <string name="clip_label">PassManager</string>

    <string name="submit">登録</string>
    <string name="login">ログイン</string>
    <string name="fingerPrintLogin">指紋ログイン</string>
    <string name="password">パスワード</string>
    <string name="password2">パスワード2</string>
    <string name="passwordConf">パスワード(確認)</string>

    <string name="app_password_registration">アプリ用パスワード登録</string>

    <string name="app_password_is_registered">アプリ用パスワードが登録されました！</string>

    <string name="pref_appPassword">pref_appPassword</string>

    <string name="plus">+</string>
    <string name="msg_register_app_password">アプリ用パスワードを登録してください</string>

    <string name="showDetail">詳細表示</string>
    <string name="sendMail">メール送信</string>
    <string name="openLoginUrl">ログインURLを開く</string>
    <string name="copyLoginId">ログインIDをコピー</string>
    <string name="copyPassword1">パスワード1をコピー</string>
    <string name="copyPassword2">パスワード2をコピー</string>
    <string name="generate">生成</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="numberSize">桁数</string>
    <string name="bigAlphabet">大文字アルファベット</string>
    <string name="smallAlphabet">小文字アルファベット</string>
    <string name="numberLetter">数字</string>
    <string name="symbolLetter">記号</string>

    <string name="labelName">項目名</string>
    <string name="loginId">ログインID</string>
    <string name="loginUrl">ログインURL</string>
    <string name="memo">メモ</string>
    <string name="eight">8</string>
    <string name="letterType">文字種別</string>

    <string name="display">表示</string>
    <string name="hiddenMarks">●●●●●●●●</string>


    <!-- 指紋認証サンプルからパクったやつ -->
    <string name="application_name">FingerprintDialog</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>


    <string name="format_copy">%sをコピーしました。</string>
    <string name="format_confirmDelete">%sを削除しますか？</string>
    <string name="format_deleted">%sを削除しました。</string>


    <string name="error_numberSizeLength">桁数は1〜99の間で入力してね</string>
    <string name="error_required">%sを入力してね</string>
    <string name="error_noSelected">%sを選択してね</string>
    <string name="error_passwordCreateFailed">パスワードの生成に失敗しました。</string>
    <string name="error_cannot_login">ログインできなかったよ</string>
    <string name="error_notEquals" formatted="false">%sと%sが一致しません</string>
</resources>
