<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/numberSizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/marginLong"
        android:layout_marginStart="@dimen/marginShort"
        android:layout_marginEnd="@dimen/marginShort"
        android:layout_marginBottom="@dimen/marginShort">

        <TextView
            android:id="@+id/numberSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberSize"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/marginShort" />

        <EditText
            android:id="@+id/numberSizeText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"
            android:layout_toEndOf="@id/numberSizeLabel"
            android:inputType="numberSigned"
            android:layout_margin="@dimen/marginShort"
            android:text="@string/eight"
            android:textAlignment="textEnd" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bigAlphabetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/numberSizeLayout"
        android:layout_margin="@dimen/marginShort">

        <CheckBox
            android:id="@+id/bigAlphabetCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/marginShort" />

        <TextView
            android:id="@+id/bigAlphabetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bigAlphabet"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/bigAlphabetCheckBox" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/smallAlphabetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bigAlphabetLayout"
        android:layout_margin="@dimen/marginShort">

        <CheckBox
            android:id="@+id/smallAlphabetCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/marginShort" />

        <TextView
            android:id="@+id/smallAlphabetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smallAlphabet"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/smallAlphabetCheckBox" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberLetterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/smallAlphabetLayout"
        android:layout_margin="@dimen/marginShort">

        <CheckBox
            android:id="@+id/numberLetterCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/marginShort" />

        <TextView
            android:id="@+id/numberLetterLabel"
            android:layout_width="@dimen/dialogGeneratorLabelWidth"
            android:layout_height="wrap_content"
            android:text="@string/numberLetter"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/numberLetterCheckBox" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/symbolLetterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/numberLetterLayout"
        android:layout_margin="@dimen/marginShort">

        <CheckBox
            android:id="@+id/symbolLetterCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/marginShort" />

        <TextView
            android:id="@+id/symbolLetterLabel"
            android:layout_width="@dimen/dialogGeneratorLabelWidth"
            android:layout_height="wrap_content"
            android:text="@string/symbolLetter"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/symbolLetterCheckBox" />


    </RelativeLayout>


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/symbolLetterLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/marginLong"
        android:layout_marginTop="@dimen/marginLong"
        android:text="@string/cancel" />


    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/symbolLetterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/generate"
        android:layout_marginStart="@dimen/marginLong"
        android:layout_marginTop="@dimen/marginLong"
        android:layout_marginEnd="@dimen/marginLong" />


</android.support.constraint.ConstraintLayout>