<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMiddle">


        <TextView
            android:id="@+id/labelNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelName"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="@dimen/marginShort"
            style="@style/EditTextStyle"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@id/labelNameLabel">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/loginIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginId"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/marginShort"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <EditText
            android:id="@+id/loginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@id/loginIdLabel"
            android:layout_marginTop="@dimen/marginShort"
            style="@style/EditTextStyle"
            android:lines="1"
            android:inputType="text" />

        <TextView
            android:id="@+id/password1Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/loginId"
            android:layout_marginTop="@dimen/marginShort"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:id="@+id/password1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password1Label">

            <Button
                android:id="@+id/password1GenerateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/generate" />


            <EditText
                android:id="@+id/password1Edit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                style="@style/EditTextStyle"
                android:lines="1"
                android:inputType="textPassword"
                android:layout_toStartOf="@id/password1GenerateButton"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/marginShort"

                />


        </RelativeLayout>

        <TextView
            android:id="@+id/password2Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            app:layout_constraintTop_toBottomOf="@id/password1Layout"
            android:layout_marginTop="@dimen/marginShort"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:id="@+id/password2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password2Label">


            <Button
                android:id="@+id/password2GenerateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/password2Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                style="@style/EditTextStyle"
                android:lines="1"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/password2GenerateButton"
                android:layout_marginEnd="@dimen/marginShort" />


        </RelativeLayout>

        <TextView
            android:id="@+id/loginUrlLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginUrl"
            app:layout_constraintTop_toBottomOf="@id/password2Layout"
            android:layout_marginTop="@dimen/marginShort"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/loginUrlEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@id/loginUrlLabel"
            style="@style/EditTextStyle"
            android:lines="1"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/memoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memo"
            app:layout_constraintTop_toBottomOf="@id/loginUrlEdit"
            android:layout_marginTop="@dimen/marginShort"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/memoEdit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@id/memoLabel"
            android:ems="10"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/marginShort"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginTop="@dimen/marginMiddle"
            app:layout_constraintTop_toBottomOf="@id/memoEdit"
            android:text="@string/submit" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>