<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginShort">

        <TextView
            android:id="@+id/labelNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/labelText" />

        <TextView
            android:id="@+id/labelNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/labelNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/marginShort"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/loginIdGroup"
            app:layout_constraintTop_toBottomOf="@id/labelNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/loginIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginId"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/labelText" />

            <TextView
                android:id="@+id/loginIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/loginIdLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/marginShort"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/password1Group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginIdGroup">

            <TextView
                android:id="@+id/password1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/labelText" />

            <Button
                android:id="@+id/password1ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginShort"
                app:layout_constraintTop_toBottomOf="@id/password1Label"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:drawable/ic_menu_view" />

            <TextView
                android:id="@+id/password1Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password1Label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/password1ToggleButton"
                android:layout_margin="@dimen/marginShort"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/password2Group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password1Group">

            <TextView
                android:id="@+id/password2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/labelText" />

            <Button
                android:id="@+id/password2ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginShort"
                app:layout_constraintTop_toBottomOf="@id/password2Label"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:drawable/ic_menu_view" />

            <TextView
                android:id="@+id/password2Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password2Label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/password2ToggleButton"
                android:layout_margin="@dimen/marginShort"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loginUrlGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password2Group">

            <TextView
                android:id="@+id/loginUrlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginUrl"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/labelText" />

            <TextView
                android:id="@+id/loginUrlText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/loginUrlLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/marginShort"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/memoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginUrlGroup">

            <TextView
                android:id="@+id/memoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/labelText" />

            <TextView
                android:id="@+id/memoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/memoLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/marginShort"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</ScrollView>